Reduce img width, menu page, to avoid overlap on shrinkage

--- a/pages/menu/styles.css
+++ b/pages/menu/styles.css
@@ -49,27 +49,31 @@ main {
   padding-bottom: 25px;
 }
 
-img {
-  width: 75%;
-  padding: 10px;
-  background-color: rgba(255, 255, 255, 0.739);
-  margin: 10px;
-}
-
 .flex-container {
   display: flex;
   flex-direction: column;
+  overflow:hidden;
 }
 
 .flex-container table {
   border: 2px solid #341f03d6;
   border-style: dotted;
   margin-top: 10px;
-  margin-bottom: 10px;;
+  margin-bottom: 10px;
 }
 
+img {
+  width: 50%;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.739);
+  margin: 10px;
+}
+
+
 .pratos-dia p {
-  font-size: 14px;
+  font-size: 12px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .menu-table-head {
