--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ main {
 .sobre .img-container {
   background-color: #ec9a3653;
   margin-right: -10px;
-  flex-shrink: 2;
+  flex-shrink: 1.5;
 }
 
 .sobre .img-container .frame {
@@ -102,7 +102,7 @@ main {
   background-color: rgba(255, 255, 255, 0.739);
 }
 .sobre .text {
-  width: 100%;
+  width: 80%;
   padding: 5px;
   margin-left: 10px;
   margin-bottom: 0px;
